# picoHttpd

./: .gitignore  CMakeLists.txt  Makefile  mimetypes.txt  readme.md
include/: authenticate.h  httpconst.h  httpd.h  httpresponse.h  mimetypes.h
src/auth/: authenticate.c
src/http/: dllmain.c  example_route.inc  httpd.c  httpd.def  httpd.rc  httpresponse.c  main.c
src/utils/: mimetypes.c
test/: test_cases.c  test_responses.c
